--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 tokio = { git = "https://github.com/tokio-rs/tokio.git" }
 futures = "0.3.0"
 bytes = "0.4"
+async-trait = "0.1.17"
